Update SQL Chunking feature